# typechecker-combinators

./: README.md  regenerate-readme.hs  typechecker-combinators.cabal
src/: Demo.hs  TypecheckerCombinators.hs
src/Typechecker/: Combinators.hs  Core.hs  Elem.hs  Elems.hs  Fix.hs  Handle.hs  Match.hs  MonadEq.hs  Sum.hs  Terms.hs  Types.hs  Unification.hs  Unifix.hs  Unify.hs
src/TypecheckerCombinators/: Combinators.hs  Core.hs  Elem.hs  Elems.hs  Fix.hs  Handle.hs  Match.hs  MonadEq.hs  Sum.hs  Terms.hs  Typechecker.hs  Types.hs  Unification.hs  Unifix.hs  Unify.hs
