name:                typechecker-combinators
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     TypecheckerCombinators
  build-depends:       base
                     , doctest
                     , containers
                     , mtl
                     , transformers
                     , union-find
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -Wall
