name:                typechecker-combinators
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Demo
                     , TypecheckerCombinators.Combinators
                     , TypecheckerCombinators.Core
                     , TypecheckerCombinators.Elem
                     , TypecheckerCombinators.Elems
                     , TypecheckerCombinators.Fix
                     , TypecheckerCombinators.Handle
                     , TypecheckerCombinators.Match
                     , TypecheckerCombinators.MonadEq
                     , TypecheckerCombinators.Sum
                     , TypecheckerCombinators.Terms
                     , TypecheckerCombinators.Types
                     , TypecheckerCombinators.Unifix
                     , TypecheckerCombinators.Unify
  build-depends:       base
                     , containers
                     , lens
                     , mtl
                     , transformers
                     , union-find
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W -Wall

executable regenerate-readme
  main-is: regenerate-readme.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options:         -W -Wall
  extra-source-files:  src/Demo.hs
